--- a/html/adminPage.html
+++ b/html/adminPage.html
@@ -29,7 +29,7 @@
     <nav class="top-nav teal hide-on-med-and-up">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="homePage.html" class="brand-logo hide-on-large-only">var<span id="topNavBrandRecipePage">Ingredient</span></a>
+                <a href="homePage.html" class="brand-logo hide-on-large-only"><span class="topNavBrandNameVar">var</span><span class="topNavBrandNameIngredient">Ingredient</span></a>
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons" id="smallNavMenuAdmin">menu</i></a>
             </div>
         </div>
