--- a/html/recipePage.html
+++ b/html/recipePage.html
@@ -30,23 +30,22 @@
 
 <div id="recipePageHtml">
     <header>
-        <nav class="top-nav teal hide-on-med-and-up">
+        <nav class="top-nav teal hide-on-large-only">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="homePage.html" class="brand-logo">var<span>Ingredient</span></a>
+                    <a href="homePage.html" class="brand-logo"><span class="topNavBrandNameVar">var</span><span class="topNavBrandNameIngredient">Ingredient</span></a>
                     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons" id="smallNavMenuRecipe">menu</i></a>
                 </div>
             </div>
         </nav>
         <div class="container">
-            <a href="#" data-activates="nav-mobile" class="button-collapse side-nav full hide-on-med-and-up"><i
+            <a href="#" data-activates="nav-mobile" class="button-collapse side-nav full hide-on-large-only"><i
                     class="material-icons">menu</i></a>
         </div>
         <ul id="nav-mobile" class="side-nav fixed">
             <li class="logo fill"><a id="logo-container" href="homePage.html"><img src="http://res.cloudinary.com/rwbarker/image/upload/c_scale,h_300,w_300/v1492503178/logo_final_bxjwsl.png"></a></li>
-            <li class="divider"></li>
-            <li class="bold"><a href="homePage.html" class="waves-effect waves-teal navlinks">Home</a></li>
-            <li class="bold"><a href="userPage.html" class="waves-effect waves-teal navlinks">My Pantry</a></li>
+            <li class="bold"><a href="homePage.html" class="waves-effect waves-orange navlinks">Home</a></li>
+            <li class="bold"><a href="userPage.html" class="waves-effect waves-orange navlinks">My Pantry</a></li>
         </ul>
     </header>
 
@@ -68,8 +67,7 @@
                     <a class="btn btn-floating pulse" id="thumbup"><i class="material-icons">thumb_up</i></a>
                     <a class="btn btn-floating pulse" id="thumbdown"><i class="material-icons">thumb_down</i></a>
                     <br>
-                    <a class="waves-effect waves-light btn" id="addFavorite"><i
-                            class="material-icons left">playlist_add</i>Favorite
+                    <a class="waves-effect waves-light btn" id="addFavorite"><i class="material-icons left">playlist_add</i>Favorite
                     </a>
                 </span>
                 </div>
