--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -31,11 +31,11 @@
 <body id="searchResultsBody">
 
 <div id="searchResultsHtml">
-    <!--<header>-->
-        <nav class="top-nav teal hide-on-med-and-up	">
+    <header>
+        <nav class="top-nav teal hide-on-large-only	">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="homePage.html" class="brand-logo">var<span>Ingredient</span></a>
+                    <a href="homePage.html" class="brand-logo"><span class="topNavBrandNameVar">var</span><span class="topNavBrandNameIngredient">Ingredient</span></a>
                     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons" id="smallNavMenuSearch">menu</i></a>
                 </div>
             </div>
@@ -43,23 +43,23 @@
 
 
         <div class="container">
-            <a href="#" data-activates="nav-mobile" class="button-collapse side-nav full hide-on-med-and-up"><i
+            <a href="#" data-activates="nav-mobile" class="button-collapse side-nav full hide-on-large-only"><i
                     class="material-icons">menu</i></a>
         </div>
         <ul id="nav-mobile" class="side-nav fixed">
             <li class="logo fill"><a id="logo-container" href="homePage.html"><img src="http://res.cloudinary.com/rwbarker/image/upload/c_scale,h_300,w_300/v1492503178/logo_final_bxjwsl.png"></a></li>
-            <li class="center"><a href="homePage.html" class="waves-effect waves-teal navlinks home">Home</a></li>
-            <li class="center"><a href="#!" class="waves-effect waves-teal navlinks myPantry">My Pantry</a></li>
-            <li class="center"><a href="#!" class="waves-effect waves-teal navlinks updateSearch"><i class="material-icons">search</i></a></li>
+            <li class="center"><a href="homePage.html" class="waves-effect waves-orange navlinks home">Home</a></li>
+            <li class="center"><a href="#!" class="waves-effect waves-orange navlinks myPantry">My Pantry</a></li>
+            <li class="center"><a href="#!" class="waves-effect waves-orange navlinks updateSearch"><i class="material-icons">search</i></a></li>
             <li class="divider"></li>
-            <li class="center searchIngredients"><span id="newSearchIngredients">Search Ingredients</span></li>
+            <li class="center searchIngredients">My Ingredients</li>
             <ul class="center">
                 <li>chicken</li>
                 <li>pork</li>
                 <li>peas</li>
             </ul>
             <li class="divider"></li>
-            <li class="center addIngredients">Add Ingredients:</li>
+            <li class="center addIngredients">Add Ingredients</li>
             <ul class="collapsible" data-collapsible="expandable">
                 <li>
                     <div class="collapsible-header">Meat</div>
@@ -210,7 +210,7 @@
                 </li>
             </ul>
         </ul>
-    <!--</header>-->
+    </header>
 
     <main>
         <div class="container" id="results">
